--- a/views/license.ejs
+++ b/views/license.ejs
@@ -147,6 +147,7 @@
       reproduction, and distribution of the Work otherwise complies with
       the conditions stated in this License.
    <br>
+   <p style="text-indent: 1%;">
    5. Submission of Contributions. Unless You explicitly state otherwise,
       any Contribution intentionally submitted for inclusion in the Work
       by You to the Licensor shall be under the terms and conditions of
@@ -154,12 +155,13 @@
       Notwithstanding the above, nothing herein shall supersede or modify
       the terms of any separate license agreement you may have executed
       with Licensor regarding such Contributions.
-   <br>
+   </p>
+   <p style="text-indent: 1%;">
    6. Trademarks. This License does not grant permission to use the trade
       names, trademarks, service marks, or product names of the Licensor,
       except as required for reasonable and customary use in describing the
       origin of the Work and reproducing the content of the NOTICE file.
-   <br>
+   </p>
    7. Disclaimer of Warranty. Unless required by applicable law or
       agreed to in writing, Licensor provides the Work (and each
       Contributor provides its Contributions) on an "AS IS" BASIS,
@@ -169,7 +171,7 @@
       PARTICULAR PURPOSE. You are solely responsible for determining the
       appropriateness of using or redistributing the Work and assume any
       risks associated with Your exercise of permissions under this License.
-   <br>
+   <p style="text-indent: 1%;">
    8. Limitation of Liability. In no event and under no legal theory,
       whether in tort (including negligence), contract, or otherwise,
       unless required by applicable law (such as deliberate and grossly
@@ -181,7 +183,8 @@
       work stoppage, computer failure or malfunction, or any and all
       other commercial damages or losses), even if such Contributor
       has been advised of the possibility of such damages.
-   <br>
+   </p>
+   <p style="text-indent: 1%;">
    9. Accepting Warranty or Additional Liability. While redistributing
       the Work or Derivative Works thereof, You may choose to offer,
       and charge a fee for, acceptance of support, warranty, indemnity,
@@ -192,11 +195,14 @@
       defend, and hold each Contributor harmless for any liability
       incurred by, or claims asserted against, such Contributor by reason
       of your accepting any such warranty or additional liability.
-   <br>
+   </p>
+   <p style="text-align: center;">
    END OF TERMS AND CONDITIONS
-   <br>
+   </p>
+   <p style="text-align: center;">
    APPENDIX: How to apply the Apache License to your work.
-   <br>
+   </p>
+   <p style="text-indent: 1%;">
       To apply the Apache License to your work, attach the following
       boilerplate notice, with the fields enclosed by brackets "{}"
       replaced with your own identifying information. (Don't include
@@ -205,20 +211,28 @@
       file or class name and description of purpose be included on the
       same "printed page" as the copyright notice for easier
       identification within third-party archives.
-   <br>
-   Copyright 2017 doyoe.com
-   <br>
+   </p>
+   <p style="text-align: center;">
+   Copyright 2017 infinite-peak-51661.herokuapp.com
+   </p>
+   <p style="text-indent: 1%;">
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
-   <br>
+   </p>
+   <p style="text-indent: 1%;">
        http://www.apache.org/licenses/LICENSE-2.0
-   <br>
+   </p>
+   <p style="text-indent: 1%;">
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
+   </p>
+   <p style="text-align: center;">
+      <strong>Author: Lê Việt Thắng</strong>
+   </p>
 </div>
 </body>
 </html>
